# Antivirus-rust-

./: Cargo.toml  README.md  appwindow.slint  crea-cervello.py  guardian.rs  logger.rs  main.rs  realtime.rs  scanner.rs  updater.rs
